TOOLS: fix automake warning
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -40,7 +40,7 @@ mathtool_SOURCES = mathtool.cc
 mathtool_LDADD   = $(progs_ldadd)
 
 # === Bsewavetool tests ===
-check-after: bsewavetool-tests
+check-local: bsewavetool-tests
 bsewavetool-tests:
 	./bsewavetool --unit-test
 
