--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -15,7 +15,7 @@ progs_ldadd     = ../bse/libbse-@MAJOR@.la $(LIBBSE_LIBS)
 #
 
 bin_PROGRAMS        = bsewavetool
-bsewavetool_SOURCES = bsewavetool.cc bwtwave.cc bseloopfuncs.cc
+bsewavetool_SOURCES = bsewavetool.cc bwtwave.cc bseloopfuncs.cc ../topbuildid.cc
 bsewavetool_LDADD   = $(progs_ldadd)
 EXTRA_DIST         += bsewavetool.hh bwtwave.hh bseloopfuncs.hh sfiutils.hh
 
