--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -178,6 +178,9 @@ artscompressor-test:
 # required wave files for sample based tests *-wave-[12]-test.bse
 EXTRA_DIST += pseudo-saw.bsewave pseudo-square-env.bsewave pseudo-stereo.bsewave pseudo-stereo-env.bsewave
 
+# required soundfonts
+EXTRA_DIST += minfluid.sf2 minfluid.sf2.LICENSE
+
 # a test for play-type=adsr-wave-1
 FEATURE_TESTS += adsr-wave-1-test
 EXTRA_DIST += adsr-wave-1-test.bse adsr-wave-1-test.ref
