V8BSE: add ebeast/v8bse/Makefile.am
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -695,6 +695,7 @@ bse/bseconfig.h
 bse/Makefile
 bse/icons/Makefile
 bse/res/Makefile
+ebeast/v8bse/Makefile
 bse/pybse/Makefile
 bse/tests/Makefile
 plugins/Makefile
