V8BSE: add rules to fetch node-gyp and electron via npm
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/v8bse/Makefile.am
+++ b/ebeast/v8bse/Makefile.am
@@ -1,5 +1,21 @@
 # BEAST & BSE
 include $(top_srcdir)/Makefile.decl
 
+CLEANDIRS     =
+
+
+# == electron ==
+npm:
+	npm install --save electron		# ./node_modules/electron/dist/electron
+	npm install --save-dev node-gyp		# builds build/Release/v8bse.node
+node_modules/: npm
+clean-node_modules:
+	rm -rf node_modules/
+
+# == clean ==
+clean-local: cleandirs # clean-node_modules
+cleandirs:
+	rm -rf $(CLEANDIRS)
+
 EXTRA_DIST += $(strip \
 )
