EBEAST: describe experimental make rules
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/Makefile.am
+++ b/ebeast/Makefile.am
@@ -5,3 +5,12 @@ SUBDIRS = v8bse .
 
 EXTRA_DIST += $(strip \
 )
+
+# == all: ==
+all:
+	@echo "$$(basename $$(pwd))/: experimental code, not built by default. Usage:"
+	@echo "	make npm	# install electron and build tools locally"
+	@echo "	make app	# build the v8 Bse module and app files"
+	@echo "	make run	# run the electron app in the current directory"
+	@echo "	make clean	# remove build files"
+	@echo "	make npmclean	# remove npm installations and make clean"
