--- a/ebeast/v8bse/Makefile.am
+++ b/ebeast/v8bse/Makefile.am
@@ -7,13 +7,7 @@ CLEANDIRS     =
 
 # == all: ==
 all:
-	@echo "make all -C $$(basename $$(pwd))"
-	@echo "	This is experimental code, which is not currently built by default. Usage:"
-	@echo "	make npm	install electron and build tools locally"
-	@echo "	make app	build the v8 Bse module and app files"
-	@echo "	make run	run the electron app in the current directory"
-	@echo "	make clean	remove build files"
-	@echo "	make npmclean	remove npm installations and make clean"
+	@echo "$$(basename $$(pwd))/: experimental code, not built by default"
 
 # == run ==
 run:	# requires: npm app
