V8BSE: link v8bse.node against libbse-0.so, use -rpath to search install path
The v8bse.node node module is linked only once during build time by node-gyp.
Once installed, it needs to find $(libdir)/libbse-0.so if libdir is different
from /usr/lib. Thus it needs its rpath to be $(libdir).

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/v8bse/Makefile.am
+++ b/ebeast/v8bse/Makefile.am
@@ -23,7 +23,7 @@ v8bse_sources = nodemodule.cc
 v8bse_deps    = v8bse.cc binding.gyp
 v8bse_rmflags = -fno-exceptions -fno-rtti
 v8bse_incdirs = ../../ ./v8pp/ $(patsubst -%, , $(patsubst -I%, %, $(LIBBSE_CFLAGS)))
-v8bse_libs    = $(LIBBSE_LIBS)
+v8bse_libs    = $(LIBBSE_LIBS) -L$(abs_top_builddir)/bse/.libs -lbse-@MAJOR@
 v8bse.node: $(v8bse_sources) $(v8bse_deps) ../node_modules/electron/dist/electron
 	$(AM_V_GEN)
 	$(Q) rm -f v8bse.node build/Release/v8bse.node
@@ -52,7 +52,8 @@ binding.gyp: Makefile # binding.gyp needs Makefile variables
 	@echo "      'cflags!':      [ $(patsubst %, '%'$(cma), $(v8bse_rmflags)) ],"	>>$@
 	@echo "      'cflags_cc!':   [ $(patsubst %, '%'$(cma), $(v8bse_rmflags)) ],"	>>$@
 	@echo "      'include_dirs': [ $(patsubst %, '%'$(cma), $(v8bse_incdirs)) ],"	>>$@
-	@echo "      'libraries':    [ $(patsubst %, '%'$(cma), $(v8bse_libs)) ],"	>>$@
+	@echo "      'libraries':    [ $(patsubst %, '%'$(cma), $(v8bse_libs))"		>>$@
+	@echo "                        '-Wl,-rpath,$(libdir)' ],"			>>$@
 	@echo "    }"									>>$@
 	@echo "  ]"									>>$@
 	@echo "}"									>>$@
