EBEAST: use LD_PRELOAD to pick up -lbse from $(builddir) for 'make run'
For 'make run', we point LD_PRELOAD at the builddir libbse, to avoid picking
up an old installed libbse from /usr/lib or rpath settings.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/Makefile.am
+++ b/ebeast/Makefile.am
@@ -30,4 +30,6 @@ app:
 
 # == run ==
 run: app	# requires: npm
+	LD_PRELOAD="$(abs_top_builddir)/bse/.libs/libbse-@MAJOR@.so" \
 	./node_modules/electron/dist/electron .
+# NOTE, prefer LD_PRELOAD over LD_LIBRARY_PATH, to pick up $(builddir)/libbse *before* /usr/lib/libbse
