BUILD: ensure MOSTLYCLEANFILES can be used with +=
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -4,6 +4,7 @@
 EXTRA_HEADERS=
 MAINTAINERCLEANFILES=$(GENERATED)
 CLEANFILES=$(GENERATED_CLEANFILES)
+MOSTLYCLEANFILES=
 GENERATED_CLEANFILES=
 GENERATED=$(strip $(GENERATED_CLEANFILES))
 EXTRA_DIST=
