--- a/ebeast/Makefile.am
+++ b/ebeast/Makefile.am
@@ -27,6 +27,12 @@ app:	package.json
 
 # == run ==
 run: app
+	$(GTK2_DARK) \
 	LD_PRELOAD="$(abs_top_builddir)/bse/.libs/libbse-@MAJOR@.so" \
 	./node_modules/electron/dist/electron .
-# NOTE, prefer LD_PRELOAD over LD_LIBRARY_PATH, to pick up $(builddir)/libbse *before* /usr/lib/libbse
+# NOTE1, prefer LD_PRELOAD over LD_LIBRARY_PATH, to pick up $(builddir)/libbse *before* /usr/lib/libbse
+# NOTE2, add --js-flags="--expose-gc" to the command line to enable global.gc();
+# If libdbusmenu-glib.so is missing, electron 1.4.15 displays a Gtk+2 menu bar, ignoring
+# the BrowserWindow.darkTheme option. Here, we preselect a commonly installed dark Gtk+2
+# theme if it's present.
+GTK2_DARK = $(shell test -f /usr/share/themes/Ambiance/gtk-2.0/gtkrc && echo 'GTK2_RC_FILES=/usr/share/themes/Ambiance/gtk-2.0/gtkrc')
